# ninja-linter

./: .gitignore  .ninja-linter.json  Agents.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  RELEASE.md  build.rs  install.ps1  install.sh  uninstall.sh
.github/workflows/: build.yml  ci.yml  pr.yml  release.yml  test.yml
.junie/: guidelines.md
src/: command.rs  config.rs  file.rs  main.rs  parallel.rs  temp_test.rs  tui.rs  updater.rs
