[package]
name = "ninja-linter"
version = "0.6.2"
edition = "2024"
build = "build.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
shadow-rs = { version = "1.5.0", default-features = false }
log = "0.4.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.29.0"
dirs = "6.0"


[build-dependencies]
shadow-rs = "1.5.0"

[[bin]]
name = "ninja-linter"
path = "src/main.rs"

[profile.dist]
inherits = "release"
lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true
