[package]
name = "ninja-linter"
version = "0.8.5"
edition = "2024"
build = "build.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
shadow-rs = { version = "1.5.0", default-features = false }
log = "0.4.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.29.0"
ratatui = "0.29"
dirs = "6.0"
reqwest = { version = "0.13.4", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.103"
self-replace = "1"
chrono = "0.4.45"


[dev-dependencies]
mockito = "1"

[build-dependencies]
shadow-rs = "1.5.0"

[[bin]]
name = "ninja-linter"
path = "src/main.rs"

[profile.dist]
inherits = "release"
lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true
